[package]
name = "storm"
version = "0.1.0"
authors = ["Matt Blessed <m@ttblessed.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.8.3"
http = "0.2.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
regex = "1.4.5"
reqwest = { version = "0.11.1", features = ["blocking", "json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_derive = "1.0.123"
serde_json = "1.0.64"
zap_api = "0.0.2"
